two points button works, increment value button does not

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,21 @@ body{
    text-align: center;
 }
 
+.form-control {
+   border: 2px red solid;
+}
+
+#btn-container{
+   margin: 30px;
+}
+
+
+
+#increment-value{
+   max-width: 200px;
+   margin: auto; 
+}
+
 
 
 
